ilo: fix a compile error with -Werror=format-security

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=83777